# libcpputils

./: CMakeLists.txt  test.sh
include/: filesystem.h  static_file_reader.h  type_reader.h
src/: filesystem.cc
tests/: CMakeLists.txt  array_reader_tests.cc  block_size_tests.cc  filesystem_tests.cc  static_file_reader_tests.cc
